app/scss/_home.scss
#home {
  scroll-margin-block-start: 10rem;
}

.home {
  height: 140vh;
  background-image: url("../fallback_images/Architecture.png");

  @supports (
    background-image: -webkit-image-set(url("../images/Architecture\ background.webp")
          1x)
  ) {
    background-image: -webkit-image-set(
      url("../images/Architecture\ background.webp") 1x
    );
  }
  background-repeat: no-repeat;
  background-position: center center;
  background-size: cover;
  background-attachment: scroll;
}

.heading-container {
  max-width: 90rem;
  margin-left: auto;
  margin-right: auto;
  padding: 21rem 1rem 0 3.75rem;

  @include breakpoint-down(mdsmall) {
    padding: 16rem 1rem 0 2.85rem;
  }

  @include breakpoint-down(xsmall) {
    padding-left: 1.875rem;
  }

  @include height-breakpoint-down(mdsmall) {
    padding-top: 6.5rem;
  }

  @include height-breakpoint-down(small) {
    padding-top: 16rem;
  }

  @include height-breakpoint-down(xsmall) {
    padding-top: 4rem;
  }
}

.main-text {
  visibility: hidden;
  opacity: 0;
  font-size: $font-xxlg;
  color: var(--font-color);
  font-weight: 400;
  margin: 0;
  animation: header-fade-in 1250ms forwards 500ms;
  text-shadow: $dark-gray 1px 1px 1px, $dark-gray 2px 2px 2px;

  @include breakpoint-down(mdsmall) {
    font-size: $font-xlg;
  }

  @include breakpoint-down(xsmall) {
    font-size: $font-lrgmed;
  }
}

.colored {
  color: var(--cyan);
}

.sub-text {
  position: relative;
  z-index: -1;
  font-size: $font-lrgmed;
  color: var(--font-color);
  font-weight: 300;
  margin-left: 2px;
  visibility: hidden;
  opacity: 0;
  animation: subheader-fade-in 2000ms forwards;
  animation-delay: 1250ms;

  @include breakpoint-down(mdsmall) {
    font-size: $font-lrg;
  }

  @include breakpoint-down(xsmall) {
    font-size: $font-medlrg;
  }
}

.svg-container {
  overflow: hidden;
  margin-top: -14rem;
  padding-top: 14rem;
  padding-bottom: 2.5rem;
  background: linear-gradient(to bottom, transparent, var(--color-main) 30%);
}

.cool-shape {
  margin-top: -15rem;
  margin-bottom: -7rem;
  transform: translateX(-40rem);
}

